[package]
name = "rsa_bssa"
version = "0.1.0"
authors = ["Serge Eduardo Martínez Ramírez"]
edition = "2024"

[lib]
name="rsa_bssa"
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
rsa = { version = "0.10.0-rc.18", features = ["hazmat"] }
rand = "0.10.1"
crypto-bigint = "0.7.3"
sha3 = "0.12.0"
sha2 = "0.11.0"

# getrandom uses SO calls, WASM cannot realize this
getrandom = { version = "0.4.2", features = ["wasm_js"] }